--- a/backend/views/StaffLogin.ejs
+++ b/backend/views/StaffLogin.ejs
@@ -276,5 +276,8 @@
       </div>
     </div>
   </div>
+  <!-- Start of  Engage Bot code -->
+    <!--(optional) You can pass visitor's name, email and phone as window object window.name, window.email and window.phone -->
+
 </body>
 </html>
