--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -13,5 +13,7 @@
 
         <button>Search</button>
     </form>
+    <!-- Start of  Engage Bot code -->
+    <!--(optional) You can pass visitor's name, email and phone as window object window.name, window.email and window.phone -->
 </body>
 </html>
